--- a/userPage/user.html
+++ b/userPage/user.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="./user.css">
     <link rel="stylesheet" href="../css/menyu.css">
     <link rel="stylesheet" href="../css/header.css">
-
+    <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
 
     <title>Document</title>
 </head>
 <body>
     <section class="playlistMain">
-        <!-- <video id="myVideo" width="300px" height="300px" poster="../images/loadingImg.png"  controls >
-           <source id="source" src="http://4093ea53df76.mylistbest.com/playlists/uplist/573d5bbb9538ee3696dc4dedf23ba3be/playlist.m3u8">
-           <source id="source" src="movie.mps">
-        </video> -->
+        <video id='hls-example'  class="video-js vjs-default-skin" width="400" height="300" controls autoplay>
+            <source type="application/x-mpegURL" src="http://4093ea53df76.mylistbest.com/playlists/uplist/573d5bbb9538ee3696dc4dedf23ba3be/playlist.m3u8">
+        </video>
+
         <div class="videoconteiner">
             <video id="myVideo" poster="../images/loadingImg.png">
-                <source  id="source" type="video/mp4">
+                <source id="source" type="video/mp4">
             </video>
             <div class="sourceButton">
                 <button class="backButton"></button>
@@ -30,10 +30,10 @@
                     </svg>
                 </button>
                 <button class="play slack">
-                    <svg width="53" height="60" viewBox="0 0 53 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="53" height="60" viewBox="0 0 53 60" fill="none" xmlns="http://www.w3.org/2000/svg" class="playIcon">
                         <path d="M49.5998 24.8646L8.80406 0.758031C5.44304 -1.21222 0.459473 0.758031 0.459473 5.50981V53.723C0.459473 58.127 5.09535 60.7927 8.80406 58.5906L49.5998 34.4841C53.1926 32.282 53.1926 27.0666 49.5998 24.8646Z" fill="white"/>
                     </svg>
-                    <svg width="59" height="59" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="59" height="59" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg" class="">
                         <path d="M18.9643 59C22.3884 59 25.2857 56.2344 25.2857 52.6786V6.32143C25.2857 2.89732 22.3884 0 18.9643 0H6.32143C2.76562 0 0 2.89732 0 6.32143V52.6786C0 56.2344 2.76562 59 6.32143 59H18.9643ZM59 52.6786V6.32143C59 2.89732 56.1027 0 52.6786 0H40.0357C36.4799 0 33.7143 2.89732 33.7143 6.32143V52.6786C33.7143 56.2344 36.4799 59 40.0357 59H52.6786C56.1027 59 59 56.2344 59 52.6786Z" fill="white"/>
                     </svg>
                 </button>
@@ -273,6 +273,11 @@
            </section>
         </div>
     </section>
+    <script src="https://vjs.zencdn.net/ie8/ie8-version/videojs-ie8.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-hls/5.14.1/videojs-contrib-hls.js"></script>
+    <script src="https://vjs.zencdn.net/7.2.3/video.js"></script>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" 
     integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" 
