--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		}
 	});
 </script>
-
+<script src="./environment.js"></script>
 <body>
 <div class="mainPage">
         <div class="imgDiv">
@@ -32,17 +32,17 @@
             <img src="./images/mainImgTv.png" width="872px" height="543px"/>
         </div>
         <div class="mainDescriptionDiv">
-            <h2>
-                Register and get access 
-                to more than +4000 channels
+            <h2 id="TitleHomePage">
+                <!-- Register and get access 
+                to more than +4000 channels -->
             </h2>
             
-            <p>
-                Lorem Ipsum is simply dummy text of the printing 
+            <p id="descriptionHomePage">
+                <!-- Lorem Ipsum is simply dummy text of the printing 
                 and typesetting industry. Lorem Ipsum has been
                  the industry's standard dummy text ever since 
                  the 1500s, when an unknown printer took a galley of type 
-                and scrambled it to make a type specimen book.
+                and scrambled it to make a type specimen book. -->
             </p>
 
             <div class="buttonDiv">
