--- a/signInPage/signIn.html
+++ b/signInPage/signIn.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./signIn.css">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <script src="../environment.js"></script>
+
 </head>
 <body>
     <section class="signIn">
