--- a/userPage/user.html
+++ b/userPage/user.html
@@ -11,12 +11,14 @@
     <!-- Tv player  -->
     <link href="https://vjs.zencdn.net/7.2.3/video-js.css" rel="stylesheet">
     <title>Document</title>
+    <script src="../environment.js"></script>
+
+
 </head>
 <body>
     <section class="playlistMain">
         <div class="videoconteiner">
             <video id="myVideo" class="video-js vjs-default-skin" poster="../images/loadingImg.png" ></video>
-
             <div class="sourceButton">
                 <button class="backButton"></button>
                 <button class="prev slack">
@@ -46,155 +48,11 @@
                 <p class="backTitle">Notifications</p>
             </div>
             <div class="mainNotificationHiden">
-                <div class="innerScroll">
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColored"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoblue"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColored"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoblue"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                </div>
- 
+                <div class="innerScroll"></div>
             </div>
-
         </div>
+
+
         <div class="menyu">
             <div class="miniDivMenyu">
                 <p class="nameMenyu">Menu</p>
@@ -239,7 +97,18 @@
                     </svg>
                 </div>
             </div>
+            <div class="miniDivMenyu">
+                <img class="slackPosition" src="../images/slackMenyu.svg">
+                <p class="nameMenyu">Settings</p>
+                <div class="iconDivMenu">
+                    <svg width="22" height="22" viewBox="0 0 30 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.62775 0C2.52076 0 0 2.46354 0 5.5V16.5C0 19.5365 2.52076 22 5.62775 22H10.552C10.9038 22 11.2555 21.7135 11.2555 21.3125V19.9375C11.2555 19.5938 10.9038 19.25 10.552 19.25H5.62775C4.04494 19.25 2.81387 18.0469 2.81387 16.5V5.5C2.81387 4.01042 4.04494 2.75 5.62775 2.75H10.552C10.9038 2.75 11.2555 2.46354 11.2555 2.0625V0.6875C11.2555 0.34375 10.9038 0 10.552 0H5.62775ZM19.1695 1.14583L17.9971 2.29167C17.704 2.52083 17.704 2.97917 17.9971 3.26562L24.6214 9.51042H10.083C9.67269 9.51042 9.37958 9.85417 9.37958 10.1979V11.8021C9.37958 12.2031 9.67269 12.4896 10.083 12.4896H24.6214L17.9971 18.7917C17.704 19.0781 17.704 19.5365 17.9971 19.7656L19.1695 20.9115C19.404 21.1979 19.873 21.1979 20.1661 20.9115L29.7802 11.5156C30.0733 11.2292 30.0733 10.8281 29.7802 10.5417L20.1661 1.14583C19.873 0.859375 19.404 0.859375 19.1695 1.14583Z" fill="#323232"></path>
+                    </svg>
+                </div>
+            </div>
         </div>
+
+
         <div class="childPlaylist">
             <header class="header">
                 <a href="../channelMainPage/channelMainPage.html"><img src="../images/logoTv.png" width="415px" height="159px"/></a>
@@ -254,8 +123,8 @@
                 <p class="arrowBack"><a class="backTo" href="../channelMainPage/channelMainPage.html"><img src="../images/arrowBack.svg"/></a><span>Playlist 1</span></p>
                 <div class="refChannel">
                     <button class="buttonRef activeButton">ALL CHANELS</button>
-                    <button class="buttonRef">Favorites</button>
-                    <button class="buttonRef">Channels history</button>
+                    <button class="buttonRef">Armenian</button>
+                    <button class="buttonRef">Russian</button>
                 </div>
             </section>
             <!-- list Channel -->
