--- a/registerPage/register.html
+++ b/registerPage/register.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./register.css">
     <!-- <link rel="stylesheet" href="../signInPage//signIn.css"> -->
+    <script src="../environment.js"></script>
 
 </head>
 <body>
