--- a/screenPage/screen.html
+++ b/screenPage/screen.html
@@ -18,154 +18,8 @@
                 <p class="backTitle">Notifications</p>
             </div>
             <div class="mainNotificationHiden">
-                <div class="innerScroll">
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColored"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoblue"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColored"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoblue"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                </div>
- 
+                <div class="innerScroll"></div>
             </div>
-
         </div>
         <div class="menyu">
             <div class="miniDivMenyu">
