--- a/settings/settings.html
+++ b/settings/settings.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/menyu.css">
     <link rel="stylesheet" href="../css/header.css">
 
-
+    <script src="../environment.js"></script>
 </head>
 <body>
     <section class="playListMain">
@@ -20,154 +20,8 @@
                 <p class="backTitle">Notifications</p>
             </div>
             <div class="mainNotificationHiden">
-                <div class="innerScroll">
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColored"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoblue"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColored"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoblue"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                    <div class="notichild">
-                        <div class="notificationChild">
-                            <p class="notIcon bacColoGreen"></p>
-                            <div class="titleNoteMini">
-                                <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
-                                <p class="timering">24 mi ago </p>
-                            </div>
-                            <p class="deletButton"></p>
-                        </div>
-                        <p class="notMessige">
-                            Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
-                        </p>
-                    </div>
-                </div>
- 
+                <div class="innerScroll"></div>
             </div>
-
         </div>
         <div class="menyu">
             <div class="miniDivMenyu">
@@ -210,6 +64,15 @@
                 <div class="iconDivMenu">
                     <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M18.8418 9.87893L20.1731 9.15239C20.5475 8.95058 20.7555 8.50658 20.6307 8.06258C20.1731 6.36733 19.2162 4.83352 17.9682 3.58226C17.6354 3.29972 17.1361 3.21899 16.7617 3.42081L15.4304 4.18771C15.0144 3.8648 14.5568 3.62263 14.0576 3.42081V1.92737C14.0576 1.48337 13.7664 1.1201 13.3087 0.999013C11.603 0.555017 9.73094 0.555017 8.02526 0.999013C7.56763 1.1201 7.27642 1.48337 7.27642 1.92737V3.42081C6.77719 3.62263 6.31957 3.8648 5.90355 4.18771L4.57228 3.42081C4.19786 3.21899 3.69863 3.29972 3.36581 3.58226C2.11775 4.83352 1.1609 6.36733 0.703276 8.06258C0.57847 8.50658 0.786481 8.95058 1.1609 9.15239L2.49217 9.87893C2.45057 10.1615 2.45057 10.4037 2.45057 10.6862C2.45057 10.9284 2.45057 11.1706 2.49217 11.4127L1.1609 12.1796C0.786481 12.3815 0.57847 12.8255 0.703276 13.2694C1.1609 14.9647 2.11775 16.4985 3.36581 17.7498C3.69863 18.0323 4.19786 18.113 4.57228 17.9112L5.90355 17.1443C6.31957 17.4672 6.77719 17.7094 7.27642 17.9112V19.4047C7.27642 19.8487 7.56763 20.2119 8.02526 20.333C9.73094 20.777 11.603 20.777 13.3087 20.333C13.7664 20.2119 14.0576 19.8487 14.0576 19.4047V17.9112C14.5568 17.7094 15.0144 17.4672 15.4304 17.1443L16.7617 17.9112C17.1361 18.113 17.6354 18.0323 17.9682 17.7498C19.2162 16.4985 20.1731 14.9647 20.6307 13.2694C20.7555 12.8255 20.5475 12.3815 20.1731 12.1796L18.8418 11.4127C18.8834 10.9284 18.8834 10.4037 18.8418 9.87893ZM16.6369 12.4622L18.4674 13.4713C18.1346 14.3189 17.677 15.1262 17.0529 15.8123L15.2224 14.8033C13.8912 15.8931 13.7248 16.0141 12.0607 16.5792V18.6378C11.603 18.7185 11.1454 18.7589 10.6462 18.7589C10.1886 18.7589 9.73094 18.7185 9.27332 18.6378V16.5792C7.60923 16.0141 7.40122 15.8931 6.11156 14.8033L4.28106 15.8123C3.65703 15.1262 3.19941 14.3189 2.86659 13.4713L4.69708 12.4622C4.36427 10.7669 4.36427 10.5651 4.69708 8.86985L2.86659 7.86077C3.19941 7.01314 3.65703 6.20587 4.28106 5.5197L6.11156 6.52878C7.44283 5.43897 7.60923 5.31788 9.27332 4.7528V2.69427C9.73094 2.61354 10.1886 2.57318 10.6878 2.57318C11.1454 2.57318 11.603 2.61354 12.0607 2.69427V4.7528C13.7248 5.31788 13.9328 5.43897 15.2224 6.52878L17.0529 5.5197C17.677 6.20587 18.1346 7.01314 18.4674 7.86077L16.6369 8.86985C16.9697 10.5651 16.9697 10.7669 16.6369 12.4622ZM10.6878 6.77096C8.48288 6.77096 6.69399 8.54694 6.69399 10.6458C6.69399 12.7851 8.48288 14.5207 10.6878 14.5207C12.8511 14.5207 14.6816 12.7851 14.6816 10.6458C14.6816 8.54694 12.8511 6.77096 10.6878 6.77096ZM10.6878 12.5833C9.56454 12.5833 8.69089 11.7356 8.69089 10.6458C8.69089 9.59639 9.56454 8.7084 10.6878 8.7084C11.7695 8.7084 12.6847 9.59639 12.6847 10.6458C12.6847 11.7356 11.7695 12.5833 10.6878 12.5833Z" fill="#282828"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="miniDivMenyu">
+                <img class="slackPosition" src="../images/slackMenyu.svg">
+                <p class="nameMenyu">Settings</p>
+                <div class="iconDivMenu">
+                    <svg width="22" height="22" viewBox="0 0 30 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M5.62775 0C2.52076 0 0 2.46354 0 5.5V16.5C0 19.5365 2.52076 22 5.62775 22H10.552C10.9038 22 11.2555 21.7135 11.2555 21.3125V19.9375C11.2555 19.5938 10.9038 19.25 10.552 19.25H5.62775C4.04494 19.25 2.81387 18.0469 2.81387 16.5V5.5C2.81387 4.01042 4.04494 2.75 5.62775 2.75H10.552C10.9038 2.75 11.2555 2.46354 11.2555 2.0625V0.6875C11.2555 0.34375 10.9038 0 10.552 0H5.62775ZM19.1695 1.14583L17.9971 2.29167C17.704 2.52083 17.704 2.97917 17.9971 3.26562L24.6214 9.51042H10.083C9.67269 9.51042 9.37958 9.85417 9.37958 10.1979V11.8021C9.37958 12.2031 9.67269 12.4896 10.083 12.4896H24.6214L17.9971 18.7917C17.704 19.0781 17.704 19.5365 17.9971 19.7656L19.1695 20.9115C19.404 21.1979 19.873 21.1979 20.1661 20.9115L29.7802 11.5156C30.0733 11.2292 30.0733 10.8281 29.7802 10.5417L20.1661 1.14583C19.873 0.859375 19.404 0.859375 19.1695 1.14583Z" fill="#323232"></path>
                     </svg>
                 </div>
             </div>
