--- a/settings/settings.html
+++ b/settings/settings.html
@@ -23,6 +23,36 @@
                 <div class="innerScroll"></div>
             </div>
         </div>
+
+        <!-- notification -->
+        <div class="notification">
+            <div class="slackBack">
+                <p class="backSlack"></p>
+                <p class="backTitle">Notifications</p>
+            </div>
+            <div class="mainNotificationHiden">
+                <div class="innerScroll">
+                    
+                </div>
+            </div>
+        </div>
+
+        <!-- example Notification for displayed Page -->
+        <div id="findNotification">
+            <div class="notificationChild">
+                <p class="notIcon bacColoGreen"></p>
+                <div class="titleNoteMini">
+                    <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
+                    <p class="timering">24 mi ago </p>
+                </div>
+                <p class="deletButton"></p>
+            </div>
+            <p class="notMessige">
+                Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
+            </p>
+        </div>
+
+        <!-- menyu -->
         <div class="menyu">
             <div class="miniDivMenyu">
                 <p class="nameMenyu">Menu</p>
@@ -98,21 +128,24 @@
 
             <div class="userInputDivmini">
                 <p class="userSettings">Name</p>
-                <input type="text" value="Raya Galstyan" class="userinputValue name"/>
+                <input type="text" placeholder="name" value="" autocomplete="off" class="userinputValue name"/>
                 <img src="../images/edit.svg" class="editSvg"/>
             </div>
 
             <div class="userInputDivmini">
                 <p class="userSettings">E-mail</p>
-                <input type="text" value="AllNet@mail.ru" class="userinputValue email"/>
+                <input placeholder="E-mail" value="" id="fname" autocomplete="off" class="userinputValue email"/>
                 <img src="../images/edit.svg" class="editSvg"/>
             </div>
 
             <div class="userInputDivmini">
                 <p class="userSettings">password</p>
-                <input type="password" value="Raya Galstyan" class="userinputValue password"/>
+                <input placeholder="password" value="" autocomplete="off" class="userinputValue password"/>
                 <img src="../images/edit.svg" class="editSvg"/>
             </div>
+
+
+
 
             <div class="userInputDivmini languigDiv addingLanguig">
                 <div class="imgLang">
