--- a/userList/userList.html
+++ b/userList/userList.html
@@ -26,6 +26,7 @@
                 <div class="innerScroll"></div>
             </div>
         </div>
+        <!-- menyu -->
         <div class="menyu">
             <div class="menyuChild">
                 <label>
@@ -100,6 +101,23 @@
                 </label>
             </div>
         </div>
+
+        
+        <!-- example Notification for displayed Page -->
+        <div id="findNotification">
+            <div class="notificationChild">
+                <p class="notIcon bacColoGreen"></p>
+                <div class="titleNoteMini">
+                    <p class="titlering">Lorem Ipsum is simply dummy text of the </p>
+                    <p class="timering">24 mi ago </p>
+                </div>
+                <p class="deletButton"></p>
+            </div>
+            <p class="notMessige">
+                Lorem Ipsum is simply dummy text of thesdcjnw eeeeeocfnwcnowinco\ wedcwek mpwemo pcmpo ecmweop powekpo 
+            </p>
+        </div>
+
         <div class="childPlayList">
             <header class="header">
                 <a href="../channelMainPage/channelMainPage.html"><img src="../images/logoTv.png" width="415px" height="159px"/></a>
