--- a/userPage/user.html
+++ b/userPage/user.html
@@ -144,6 +144,7 @@
             <!-- list Channel -->
 
            <section class="scrollUserPage">
+                <img id="loading_img" src="/images/homeLoading.gif" alt="loading"/>
                 <div class="TvChannelBlock"></div>
            </section>
         </div>
