--- a/channelMainPage/channelMainPage.html
+++ b/channelMainPage/channelMainPage.html
@@ -200,6 +200,8 @@
                     <a href="../userPage/user.html" class="live">View all</a>
                 </header>
                 <!-- slick slider -->
+
+                <img id="loading_img" src="/images/homeLoading.gif" alt="loading"/>
                 <div class="channels">
                     <!-- <div class="parentChild" >
                         <a href="#" class="channelsChild"><img src="../images/channelImgTV.png"/></a>
